--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -124,7 +124,7 @@
 %
 
 \usepackage[spaces, hyphens, obeyspaces]{url}
-\usepackage[pdfa]{hyperref}
+\usepackage[pdfa,hidelinks]{hyperref}
 \usepackage{colorprofiles}
 \usepackage[a-1a]{pdfx}
 
